fix word wrapping

--- a/app/styles/article.scss
+++ b/app/styles/article.scss
@@ -158,7 +158,8 @@ $block_margin_desktop: 25px;
     position: relative;
 
     & > p, h2, blockquote, ul, .lead, .phrase, .columns, .embed, .photos, .dialogue, .single_photo {
-      margin: 20px $basic_mobile_offset
+      margin: 20px $basic_mobile_offset;
+      word-wrap: break-word;
     }
 
     iframe {
